
The long-untested support for making Windows .hlp files has been withdrawn.

There is support for using K. Goto's fast BLAS.  On a 2.6Ghz P4 with
1Gb RAM and A a 1000 x 1000 matrix we had the following timings

	R BLAS	ATLAS	Goto
A %*% A	 3.7	0.65	0.56
svd(A)	16.2	7.77	6.83

Note that using a fast BLAS is much less effective for smaller
matrices as are more common in statistical applications.


Bug fixes
---------

Fixed list.files() to properly handle paths like "C:", etc.

Fixed unlink() to accept empty file list for Unix consistency.

Fixed handling of whitespace in Rd2dvi.sh processing of DESCRIPTION
files.

Fixed handling of "--max-mem-size" syntax error on command line.

In RGui, ^T would not transpose the first and second characters on a
line.  (PR#5593)

Fixed junk character at start of a pipe(). (PR#5053)

Cross-building of R itself now works again.  (It had been broken since 1.8.0.)

Rcmd SHLIB was computing dependencies for all C files, not just those
specified on the command line, and building the DLL from all *.o files
in the directory.



rw1081
======

Files in inst/ are installed later in the process of installing a
package (at the request of Ray Brownrigg: the build process was as
documented in `Writing R Extensions').  CVS files will not be installed.

The fast bmp/png/jpeg code introduced in R 1.8.0 is used for saving
from menus (and savePlot()) as well as for the devices.

Lines drawn at the extreme top or right of the device region (e.g. by
box(which="outer")) might have been drawn one pixel too far from the
origin and so perhaps clipped.

In 1.8.0 only, the bottom line of pixels was not copied to the file
for png/jpeg/bmp device plots (as the Windows GDI function used was
incorrectly documented).

File src/nmath/dnt.c was not being built for the standalone Rmath library.

packageStatus() now works under Windows.

Fixed instability under some Windows versions associated with
double buffering of the windows() device. (PR#5173)



rw1080
======
